# PupilGaze

./: .gitignore  CMakeLists.txt  README.md  calibration_file.yml  main.cpp
EllSeg/: README.md  __init__.py  export_libtorch.py
include/: ellseg_feature.cpp  ellseg_feature.h  geometry.cpp  geometry.h  state.cpp  state.h  tool.hpp
src/api/: EyeTracking_Def.h  gazeTracingM.h  gazeTrackingM.cpp
src/shared_cpp/include/ceres/: CeresUtils.h
src/shared_cpp/include/common/: types.h
src/shared_cpp/include/zeromq/: libzmq.lib  zmq.hpp
src/shared_modules/calibration/: bundleCalibration.cpp  bundleCalibration.h  common.h  testFunction.cpp  testFunction.hpp
src/shared_modules/pupil_detectors/: Blink_Detection.cpp  Blink_Detection.hpp  detect_2d.cpp  detect_2d.hpp
src/shared_modules/pupil_detectors/singleeyefitter/: EllipseDistanceResidualFunction.h  EyeModel.cpp  EyeModel.h  EyeModel.h-  EyeModelFitter.cpp  EyeModelFitter.h  mathHelper.h  projection.h
